Change error mesages color

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -249,7 +249,7 @@ margin:30px auto;
 
 #error_explanation {
   width: 400px;
-  border: 2px solid #037496;
+  border: 2px solid #bb756f;
   padding: 7px;
   padding-bottom: 12px;
   margin-bottom: 20px;
@@ -262,7 +262,7 @@ margin:30px auto;
   padding: 5px 5px 5px 15px;
   font-size: 12px;
   margin: -7px;
-  background-color: #037496;
+  background-color: #bb756f;
   color: #fff;
 }
 
