--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -284,8 +284,37 @@ margin:30px auto;
     margin:10px;
     background-color: #bb756f;
     width:40%;
-
+}
+.right{
+	float:right;
 }
 
+.left{
+	float:left;
+}
 
+.form_questions{
+	position:relative;
+	bottom:130px;
+	right:50px;
+}
+.form_div{
+	position:relative;
+	background-color:#E7DDCE;
+	margin-left: auto;
+	margin-right: auto;
+	padding-right:10px;
+	padding-top: 10px;
+	width:270px;
+}
 
+.form_top{
+	position:relative;
+	z-index: 100;
+	bottom:-10px;
+}
+
+.form_sub{
+	margin-left: auto;
+	margin-right: auto;
+}
