--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,7 +1,12 @@
-%div.right
-	%div.form_questions
-		= image_tag 'singupformtitle.png', :class => 'form_top'
-		%div.form_div
+.column1
+	Cursus massa ac mid et egestas porttitor augue ridiculus rhoncus elementum nisi. Cum porttitor porta. Quis, et et, magna penatibus in? Cras. Et eros, enim tincidunt rhoncus lacus nec elementum, scelerisque aliquet porta aliquam adipiscing, adipiscing pellentesque ac! Magnis velit! Enim sociis auctor et aliquam mauris dis augue, scelerisque, cum odio egestas proin purus turpis elementum dis integer turpis? Dapibus. 
+	%br
+	%br
+	Cursus massa ac mid et egestas porttitor augue ridiculus rhoncus elementum nisi. Cum porttitor porta. Quis, et et, magna penatibus in? Cras. Et eros, enim tincidunt rhoncus lacus nec elementum, scelerisque aliquet porta aliquam adipiscing, adipiscing pellentesque ac! Magnis velit! Enim sociis auctor et aliquam mauris dis augue, scelerisque, cum odio egestas proin purus turpis elementum dis integer turpis? Dapibus. 
+
+.column2
+	.form_questions
+		.form_div
+			=image_tag "singupformtitle.png", :class=>"form_title"
 			= render :partial => 'questions/form'
-%div.left
-	dsdadasdasdasdasda
+
