--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,53 +5,58 @@
   <title>Might Buy for Business</title>
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
-    <%= stylesheet_link_tag "reset" %>
-    <%= stylesheet_link_tag "style" %>
-    <%= javascript_include_tag "application" %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <%= yield(:head) %>
-    <%= csrf_meta_tag %>
-     
-  
-</head>
-<body>
-  <div id="page" class="centered">
-    <div id="header">
-      <a href="<%=root_path%>">
-      <div id="header_left">
+      <![endif]-->
+      <%= stylesheet_link_tag "reset" %>
+      <%= stylesheet_link_tag "style" %>
+      <%= javascript_include_tag "application" %>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+      <%= yield(:head) %>
+      <%= csrf_meta_tag %>
+
+
+    </head>
+    <body>
+      <div id="page" class="centered">
+        <div id="header">
+          <a href="<%=root_path%>">
+            <div id="header_left">
+            </div>
+          </a>
+          <%-if current_user.nil? %>
+          <div id="header_right">
+            <a href="<%=new_user_registration_path()%>"> <span class="login"></span></a>
+          </div>
+          <%-end%>
+          <div class="clear"></div>
+        </div>
+        <div class="home_content">
+          <div class="home_title"></div>  
+          <div class="home_left"></div> 
+          <div class="home_middle"></div> 
+          <div class="home_right"></div>  
+        </div>
+        <div class="container">
+
+          <div class="container_top"></div>
+          <div class="content">
+            <%= render "layouts/application/header" %>
+                        <div class="clear"></div>
+            <%= render "layouts/application/flash_messages" %>
+            <div class="clear"></div>
+
+            <%= yield %>
+
+          </div>
+        </div>
+        <div id="footer">
+          <div class="footer_menu">
+            <a href="">terms of use </a>
+            <a href="">privacy policy </a>
+            <a href="">contact </a>
+          </div>
+          <div class="footer_logo"></div>
+        </div>
       </div>
-    </a>
-      <div id="header_right">
-        <a href="<%=new_user_registration_path()%>"> <span class="login"></span></a>
-      </div>
-      <div id="clear"></div>
-    </div>
-    <div class="home_content">
-        <div class="home_title"></div>  
-        <div class="home_left"></div> 
-        <div class="home_middle"></div> 
-        <div class="home_right"></div>  
-      </div>
-    <div class="container">
-	 		
-      <div class="container_top"></div>
-			<%= render "layouts/application/flash_messages" %>
-      <div class="content">
-          <%= render "layouts/application/header" %>
-         
-           <%= yield %>
-      </div>
-    </div>
-    <div id="footer">
-      <div class="footer_menu">
-        <a href="">terms of use </a>
-        <a href="">privacy policy </a>
-        <a href="">contact </a>
-      </div>
-      <div class="footer_logo"></div>
-    </div>
-  </div>
-</body>
-</html>
+    </body>
+    </html>
 
