--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -67,7 +67,7 @@ margin:none !important;
 													L A Y O U T   C S S
 *****************************************************************************************************************************/
 #page{
-	width: 80%;
+	width: 1024px;
 	/*padding: 0 12px 0 12px;*/
 }
 
@@ -91,12 +91,12 @@ margin:none !important;
 
 #header_right{
 	background-image: url('get_started.png');
-background-repeat: no-repeat;
-display: block;
-float: left;
-width: 25%;
-margin-top: 78px;
-padding: 40px 0 0 30px;
+	background-repeat: no-repeat;
+	display: block;
+	float: left;
+	width: 25%;
+	margin-top: 78px;
+	padding: 40px 0 0 30px;
 }
 
 .home_content{
@@ -128,18 +128,12 @@ padding: 40px 0 0 30px;
     
 }
 
-
-
 .content{
-	min-height:400px;
+	min-height:450px;
 	padding:0 12px;
 	/*margin: 30px 4px 50px 4px;*/
-
 	}		
 
-
-
-	
 #footer{
 	width:95%;
 	margin: 0 auto;
@@ -157,49 +151,46 @@ padding: 40px 0 0 30px;
 *****************************************************************************************************************************/
 
 .home_title{
-background-image: url('home_title.png');
-background-repeat: no-repeat;
-height: 100px;
-width:54%;
-margin: 0 auto;
-clear:both;
+	background-image: url('home_title.png');
+	background-repeat: no-repeat;
+	height: 100px;
+	width:54%;
+	margin: 0 auto;
+	clear:both;
 }
-
 
 .home_left{
-background-image: url('mobile.png');
-background-repeat: no-repeat;
-height: 219px;
-width: 30%;
-float: left;
-margin-left: -51px;
-margin-right: 50px;
-
+	background-image: url('mobile.png');
+	background-repeat: no-repeat;
+	height: 219px;
+	width: 30%;
+	float: left;
+	margin-left: -51px;
+	margin-right: 50px;
 }
 
-
 .home_right{
-background-image: url('retail.png');
-background-repeat: no-repeat;
-height: 219px;
-width: 30%;
-float: right;
-margin-right: -66px;
+	background-image: url('retail.png');
+	background-repeat: no-repeat;
+	height: 219px;
+	width: 30%;
+	float: right;
+	margin-right: -66px;
 }
 
 .home_middle{
-background-image: url('web.png');
-background-repeat: no-repeat;
-height: 219px;
-width: 40%;
-float:left;
-margin-top: -19px;
+	background-image: url('web.png');
+	background-repeat: no-repeat;
+	height: 219px;
+	width: 40%;
+	float:left;
+	margin-top: -19px;
 }
 
 .login{
-background-image: url('signup.png');
-background-repeat: no-repeat;
-padding: 13px 60px;
+	background-image: url('signup.png');
+	background-repeat: no-repeat;
+	padding: 13px 60px;
 }
 
 .header_nav{
@@ -209,146 +200,201 @@ padding: 13px 60px;
     margin: 30px 20px;
     padding:10px;
     float:left;
-
 }
-
 
 .header_nav li {
 	display: inline;
 	margin-right: 10px;
     padding-right: 15px;
-    	border-right: 1px #d7ccbd solid;
+    border-right: 1px #d7ccbd solid;
 }
 
 
 .header_nav a {
-		color:#141414;
-
-
-	
-  text-decoration: none;
+	color:#141414;
+	text-decoration: none;
 }
 
 .footer_logo{
-background-image: url('footer_logo.png');
-background-repeat: no-repeat;
-width:150px;
-height: 80px;
-margin:30px auto;
+	background-image: url('footer_logo.png');
+	background-repeat: no-repeat;
+	width:150px;
+	height: 80px;
+	margin:30px auto;
 }
 
 .footer_menu{ 
 	float:right;
 }
 
-	.footer_menu a{
+.footer_menu a{
     border-right: 1px #d7ccbd solid;
     margin-right: 10px;
     color:#d7ccbd; 
     text-decoration: none;
     padding-right: 5px;
-	}
-
-
-
-
+}
 
 .field_with_errors label{
-  color:red;
-  font-weight: bold;
-  border-bottom: 2px solid red;
+	color:red;
+  	font-weight: bold;
+  	border-bottom: 2px solid red;
 }
 
 
 #error_explanation {
-  width: 400px;
-  border: 2px solid #bb756f;
-  padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+	width: 400px;
+	border: 2px solid #bb756f;
+	padding: 7px;
+	padding-bottom: 12px;
+	margin-bottom: 20px;
+	background-color: #f0f0f0;
 }
 
 #error_explanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  background-color: #bb756f;
-  color: #fff;
+	text-align: left;
+	font-weight: bold;
+	padding: 5px 5px 5px 15px;
+	font-size: 12px;
+	margin: -7px;
+	background-color: #bb756f;
+	color: #fff;
 }
 
 #error_explanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 5px;
+	color: #333;
+	margin-bottom: 0;
+	padding: 5px;
 }
 
 #error_explanation ul li {
-  font-size: 12px;
-  list-style: square;
-  margin:5px;
+	font-size: 12px;
+	list-style: square;
+	margin:5px;
 }  
 
 
 .alert{
-padding: 5px;
-margin: 10px;
-background-color: #BB756F;
-width: 40%;
-position: absolute;
-z-index: 10000;
-top: 512px;
+	padding: 5px;
+	margin: 10px;
+	background-color: #BB756F;
+	width: 40%;
+	position: absolute;
+	z-index: 10000;
+	top: 512px;
 }
 
 .form_title{
 	z-index: 1000;
-position: relative;
-top: 11px;
-left: 44px;
+	position: relative;
+	top: 11px;
+	left: 44px;
 }
 
 .form_questions{	
 	margin: -130px 0 0 -90px;
 }
+
 #new_question{
 	background-color: #E7DDCE;
-padding-right: 10px;
-padding-top: 10px;
-width: 265px;
-border: 2px solid #999186;
-border-left: none;
-border-top: none;
-margin: 0 auto;
+	padding-left: 10px;
+	padding-top: 5px;
+	width: 265px;
+	border: 2px solid #999186;
+	border-left: none;
+	border-top: none;
+	margin: 0 auto;
 }
 
 .form_top{
-width: 300px;
-height: 103px;
-margin: 0 auto;
-float:left;
+	width: 300px;
+	height: 103px;
+	margin: 0 0;
+	float:left;
 }
 
 .form_sub{
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 
 .control-group{
-  margin-left: 30px;
-
+	color: #633c3a;
+	margin-left: 35px;
+	font-size: 14px;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	letter-spacing: .005em;
+	line-height: 15px;
 }
 
 .column1{
    float:left;
-   width:500px;
-
+   width:360px;
 }
 
 .column2{
+   padding-top:100px;
    float:right;
    width:300px;
+}
 
+.explanation_links {
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 14px;
+	color: #b7423d;
+	text-align:center;
+	padding: 20px;
+}
+.explanation_text {
+	margin-left: 50px;
+	color: #8e716a;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 14px;
+	letter-spacing: .005em;
+	line-height: 17px;
+	margin-top: 0px;
+	margin-bottom: 5px;    
+}
+
+.explanation_text td{ 
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 12px;
+	font-weight: bold;
+}
+
+.explanation_header {
+	margin-bottom: 0px;
+	margin-left: 20px;
+	color: #b7423d;
+	font-size: 28px;
+	font-weight: bold;	
+	font-family: 'museo_700regular';
+	letter-spacing: .005em;
+    src: url('museo700-regular-webfont.eot');
+    src: url('museo700-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('museo700-regular-webfont.woff') format('woff'),
+         url('museo700-regular-webfont.ttf') format('truetype'),
+         url('museo700-regular-webfont.svg#museo_700regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.explanation_header li { 
+	list-style-image: url("bullet.png");
+    padding: 0 0 0 0;
+}
+
+.notes {
+	text-align:center;
+	color: black;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 9px;
+	letter-spacing: .005em;
+	line-height: 13px;
+	margin-left: 0px;
+	margin-right: 60px;
+	margin-top: 3px;
+	margin-bottom: 5px;    
 }
