--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -6,7 +6,7 @@
           <li><%= link_to "Sign out", destroy_user_session_path %></li>
           <li><%= link_to "Settings", edit_user_registration_path %></li>
           <% else %>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <li><%= link_to "Sign up/", new_user_registration_path %></li>
           <li><%= link_to "Sign in", new_user_session_path %></li>
           <!--<li><%# link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>-->
           <% end -%>
