--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -1,4 +1,4 @@
- /*
+/*
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
@@ -10940,7 +10940,7 @@ input,button,textarea,select{
 .text_right{ text-align: right; }
 .text_center{ text-align: center; }
 
-.clear_both{ clear: both; }
+.clear{ clear: both; } 
 
 .left{
 	float:left;
@@ -10977,11 +10977,23 @@ padding:3px;
 margin:5px;
 }
 
+
+
+input[type=image]{
+	background-color: transparent; !important;
+	border-radius: none !important; 
+-moz-border-radius: none !important; 
+-webkit-border-radius: none !important; 
+border:none !important;
+padding:none !important;
+margin:none !important;
+}
+
 /****************************************************************************************************************************
 													L A Y O U T   C S S
 *****************************************************************************************************************************/
 #page{
-	width: 80%;
+	width: 1024px;
 	/*padding: 0 12px 0 12px;*/
 }
 
@@ -11042,18 +11054,12 @@ margin:5px;
     
 }
 
-
-
 .content{
-	min-height:400px;
+	min-height:450px;
 	padding:0 12px;
 	/*margin: 30px 4px 50px 4px;*/
-
 	}		
 
-
-
-	
 #footer{
 	width:95%;
 	margin: 0 auto;
@@ -11079,7 +11085,6 @@ margin:5px;
 	clear:both;
 }
 
-
 .home_left{
 	background-image: url('mobile.png');
 	background-repeat: no-repeat;
@@ -11089,7 +11094,6 @@ margin:5px;
 	margin-left: -51px;
 	margin-right: 50px;
 }
-
 
 .home_right{
 	background-image: url('retail.png');
@@ -11121,6 +11125,7 @@ margin:5px;
 	border: 2px #d7ccbd dashed;
     margin: 30px 20px;
     padding:10px;
+    float:left;
 }
 
 .header_nav li {
@@ -11130,11 +11135,11 @@ margin:5px;
     border-right: 1px #d7ccbd solid;
 }
 
+
 .header_nav a {
 	color:#141414;
-  	text-decoration: none;
+	text-decoration: none;
 }
-
 
 .footer_logo{
 	background-image: url('footer_logo.png');
@@ -11158,9 +11163,10 @@ margin:5px;
 
 .field_with_errors label{
 	color:red;
-	font-weight: bold;
-	border-bottom: 2px solid red;
+  	font-weight: bold;
+  	border-bottom: 2px solid red;
 }
+
 
 #error_explanation {
 	width: 400px;
@@ -11195,42 +11201,135 @@ margin:5px;
 
 
 .alert{
-    padding:10px;
-    margin:10px;
-    background-color: #bb756f;
-    width:40%;
-}
-.right{
-	float:right;
-}
-
-.left{
-	float:left;
+	padding: 5px;
+	margin: 10px;
+	background-color: #BB756F;
+	width: 40%;
+	position: absolute;
+	z-index: 10000;
+	top: 512px;
 }
 
-.form_questions{
-	position:relative;
-	bottom:130px;
-	right:50px;
+.form_title{
+	z-index: 1000;
+	position: relative;
+	top: 11px;
+	left: 44px;
 }
 
-.form_div{
-	position:relative;
-	background-color:#E7DDCE;
-	margin-left: auto;
-	margin-right: auto;
-	padding-right:10px;
-	padding-top: 10px;
-	width:270px;
+.form_questions{	
+	margin: -130px 0 0 -90px;
+}
+
+#new_question{
+	background-color: #E7DDCE;
+	padding-left: 10px;
+	padding-top: 5px;
+	width: 265px;
+	border: 2px solid #999186;
+	border-left: none;
+	border-top: none;
+	margin: 0 auto;
 }
 
 .form_top{
-	position:relative;
-	z-index: 100;
-	bottom:-10px;
+	width: 300px;
+	height: 103px;
+	margin: 0 0;
+	float:left;
 }
 
 .form_sub{
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+
+.control-group{
+	color: #633c3a;
+	margin-left: 35px;
+	font-size: 14px;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	letter-spacing: .005em;
+	line-height: 15px;
+}
+
+.column1{
+   float:left;
+   width:360px;
+}
+
+.column2{
+   padding-top:100px;
+   float:right;
+   width:300px;
+}
+
+.explanation_links a {
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 14px;
+	color: #b7423d;
+	text-align:center;
+	padding: 10px;
+}
+.explanation_links{
+	margin-left:50px;
+}
+.explanation_text {
+	margin-left: 50px;
+	color: #8e716a;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 14px;
+	letter-spacing: .005em;
+	line-height: 17px;
+	margin-top: 0px;
+	margin-bottom: 5px;    
+}
+
+.explanation_text td{ 
 	margin-left: auto;
 	margin-right: auto;
+	font-size: 12px;
+	font-weight: bold;
+
 }
+
+.explanation_header {
+	margin-bottom: 0px;
+	margin-left: 20px;
+	color: #b7423d;
+	font-size: 28px;
+	font-weight: bold;	
+	font-family: 'museo_700regular';
+	letter-spacing: .005em;
+    src: url('museo700-regular-webfont.eot');
+    src: url('museo700-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('museo700-regular-webfont.woff') format('woff'),
+         url('museo700-regular-webfont.ttf') format('truetype'),
+         url('museo700-regular-webfont.svg#museo_700regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.explanation_header li { 
+	list-style-image: url("bullet.png");
+    padding: 0 0 0 0;
+}
+
+.notes {
+	text-align:center;
+	color: black;
+	font-family: 'century gothic',verdana,arial,helvetica,sans-serif;
+	font-size: 9px;
+	letter-spacing: .005em;
+	line-height: 13px;
+	margin-left: 0px;
+	margin-right: 60px;
+	margin-top: 3px;
+	margin-bottom: 5px;    
+}
+
+.hidden{
+	display: none;
+}
+
