--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,6 +1,6 @@
 .column1
 	.explanation_links 
-		%a{href: '#' ,id: 'passbook'} passbook
+		%a{href: '#' ,id: 'passbook', class: 'active'} passbook
 		|
 		%a{href: '#', id: 'deals'} deals
 		|
