--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -11309,6 +11309,7 @@ margin:none !important;
          url('museo700-regular-webfont.svg#museo_700regular') format('svg');
     font-weight: normal;
     font-style: normal;
+	line-height: 30px;
 }
 
 .explanation_header li { 
