add image to retail section

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -43,6 +43,7 @@
 			%ul.explanation_header 
 				%li.explanation_header Make sales, make friends
 			.explanation_text Mightbuy doesn't only deliver “likes” on your FB friend.  It delivers *sales*.  You will sell more with it.  Try today
+			= image_tag 'retail_img.png', :class => :retail_img
 .column2
 	.form_questions
 		.form_div
