--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -49,5 +49,5 @@
 		.form_div
 			=image_tag "singupformtitle.png", :class=>"form_title"
 			= render :partial => 'questions/form'
-	.notes * Sorry , We can not except all businsses for the Mightbuy launch - but the first on the list will be the first to launch, after evaluating your application.
+	.notes * Sorry , We can not accept all businesses for the Mightbuy launch - but the first on the list will be the first to launch, after evaluating your application.
 
