--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -50,4 +50,4 @@
 			=image_tag "singupformtitle.png", :class=>"form_title"
 			= render :partial => 'questions/form'
 	.notes * Sorry , We can not accept all businesses for the Mightbuy launch - but the first on the list will be the first to launch, after evaluating your application.
-
+= render :partial=> "deal_tab"
