added screenshot and link

--- a/app/views/pages/_deal_tab.html.haml
+++ b/app/views/pages/_deal_tab.html.haml
@@ -4,7 +4,9 @@
 	.column1
 		.deals_image
 		.explanation_text.deals_info
-			Mightbuy is our popular app for Facebook, Twitter, and Mobile that customers use for tracking anything they Might Buy, from any website, like bookmarks.  Users typically post on Facebook  and Twitter items they are discussing, and get feedback from friends.
+			Mightbuy is our popular 
+			= link_to "app for Facebook, Twitter, and Mobile", "https://www.mightbuy.it/",  {:target => "_blank"}
+			that customers use for tracking anything they Might Buy, from any website, like bookmarks.  Users typically post on Facebook  and Twitter items they are discussing, and get feedback from friends.
 		%br	   
 		.explanation_text.underline.deals_info
 			It is a fun and social way to shop.  	
@@ -80,13 +82,13 @@
 			.black_title
 				Customers share your products with friends 
 			%br				
-			With MightBuy, your customers are spreading
-			the word about your products faster and with
-			more WHAT than you could ever do alone. 
+			With MightBuy, your customers are advertising 
+			for you.  Every they ask their friends about 
+			your products, it is a  powerful endorsement, much
+			better than showing up in Google results. 
 			%br
 			%br
-			All of this is possible through the power of
-			social networking!
+
  
  
  
